Filter experimental data

--- a/Dislocations/dislocations_analytical.ipynb
+++ b/Dislocations/dislocations_analytical.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "dislocations_analytical.ipynb\n",
+    "\n",
+    "Author: Anderson Steckler\n",
+    "\n",
     "Based on model of scattering off dirac potential on sublattice A\n",
     "Dutreix 2019"
    ]
