--- a/Learning/recip_lattice.ipynb
+++ b/Learning/recip_lattice.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Author: Anderson Steckler\n",
+    "\n",
+    "This code was to gain an intuition for the result of Fourier transforming a lattice and the resulting spacing in recipricol space"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
