--- a/TBCalcs/filtering.ipynb
+++ b/TBCalcs/filtering.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "filtering.ipynb\n",
+    "\n",
+    "Author: Anderson Steckler\n",
+    "\n",
+    "This imports the data calculated from \"tbinding_ldos.ipynb\" and filters around the backscattering points"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 129,
    "metadata": {},
@@ -563,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +617,7 @@
     "zn = (zsub - minval)/(maxval-minval) # Normalize\n",
     "zn = 2 * zn - 1 # Normalize to -1 1\n",
     "\n",
-    "c = ax7.pcolormesh(xsub,ysub,zabs,cmap='plasma')\n",
+    "c = ax7.pcolormesh(xsub,ysub,zn,cmap='plasma')\n",
     "\n",
     "fig7.colorbar(c, ax=ax7)\n",
     "\n",
