--- a/TBCalcs/tbinding_ldos.ipynb
+++ b/TBCalcs/tbinding_ldos.ipynb
@@ -2,6 +2,17 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "tbinding_ldos.ipynb\n",
+        "\n",
+        "Authors: Anderson Steckler, Sergey Pershoguba\n",
+        "\n",
+        "Calculating spatial Local Density of States of graphene lattice with added disorder."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "R14ZVD5hjfaV"
       },
