Hann Filter and Video

--- a/Learning/han.ipynb
+++ b/Learning/han.ipynb
@@ -16,14 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hann1d(x, N, x0):\n",
-    "    val = 0\n",
-    "\n",
-    "    #if (np.abs(x-x0) < N/2):\n",
-    "    #    val = np.cos(np.pi * (x-x0)/N) ** 2\n",
-    "\n",
-    "    val = np.cos(np.pi * (x-x0)/N) ** 2\n",
-    "    return val"
+    "def hann1dp(x, N, x0):\n",
+    "    return np.cos(np.pi * (x-x0)/N) ** 2"
    ]
   },
   {
